<resources>
    <string name="app_name">Orçamento</string>
    <string name="actCadastrarCliente">Cadastrar Cliente</string>
    <string name="actCadastrarPeca">Cadastrar Peça</string>
    <string name="actCadastrarOrcamento">Cadastrar Orçamento</string>
    <string name="actListaPecas">Lista de Peças</string>
    <string name="actListaClientes">Lista de Clientes</string>
    <string name="actListaTipos">Tipos de Veículos</string>
    <string name="actListaVeiculos">Veículos</string>
    <string name="actListaMarcas">Marcas de Veículos</string>


    <string name="novoPed">Novo Pedido</string>
    <string name="novoCli">Novo Cliente</string>
    <string name="novaPeca">Nova Peça</string>
    <string name="action_opcoes">Opções</string>

    <string-array name="spinEstadosCli">
        <item id="estado">Estado</item>
        <item id="AC">Acre</item>
        <item id="AL">Alagoas</item>
        <item id="AP">Amapá</item>
        <item id="AM">Amazonas</item>
        <item id="BA">Bahia</item>
        <item id="CE">Ceará</item>
        <item id="DF">Distrito Federal</item>
        <item id="Es">Espirito Santo</item>
        <item id="GO">Goiás</item>
        <item id="MA">Maranhão</item>
        <item id="MT">Mato Grosso</item>
        <item id="MS">Mato Grosso do Sul</item>
        <item id="MG">Minas Gerais</item>
        <item id="PA">Pará</item>
        <item id="PB">Paraíba</item>
        <item id="PR">Paraná</item>
        <item id="PE">Pernambuco</item>
        <item id="PI">Piauí</item>
        <item id="RJ">Rio de Janeiro</item>
        <item id="RN">Rio Grande do Norte</item>
        <item id="RN">Rio Grande do Sul</item>
        <item id="RO">Rondônia</item>
        <item id="RR">Roraima</item>
        <item id="SC">Santa Catarina</item>
        <item id="SP">São Paulo</item>
        <item id="SE">Sergipe</item>
        <item id="TO">Tocantins</item>
    </string-array>


    <string name="editCpfCli">CPF/CNPJ</string>
    <string name="editNomeCli">Nome</string>
    <string name="editRuaCli">Rua</string>
    <string name="editNumCli">Número</string>
    <string name="editCompleCli">Complemento</string>
    <string name="editBairroCli">Bairro</string>
    <string name="editCidadeCli">Cidade</string>
    <string name="editCepCli">CEP</string>
    <string name="editTelCli">Telefone</string>
    <string name="editEmailCli">E-mail</string>
    <string name="buttonSalvar">Salvar</string>
    <string name="buttonCancelar">Cancelar</string>

    <string name="editNomePca">Nome</string>
    <string name="editMarcaPeca">Marca da Peça</string>
    <string name="editTipoCarro">Tipo de Veículo</string>
    <string name="editMarcaCarro">Marca do Veículo</string>
    <string name="editModeloCarro">Modelo do Veículo</string>
    <string name="editAnoModeloCarro">Ano Modelo do Veículo</string>
    <string name="qtdePeca">Quantidade</string>
    <string name="precoPeca">Preco da Peça R$</string>


    <string name="editClienteOrc">Cliente</string>
    <string name="textViewOrc">Produtos no Orçamento</string>
    <string name="editPrecoOrc">Preço R$</string>
    <string name="novoOrcamento">Novo Orçamento</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="quantidade">Quantidade</string>
    <string name="adicionar">Adicionar</string>
    <string name="qtde">Qtde</string>
    <string name="nomeProdOrc">Nome Produto</string>
    <string name="valorProdOrc">Valor Und.</string>
    <string name="valorDialog">Valor do Produto</string>
    <string name="addQtdePecaOrcamento">Adicione a Quantidade</string>
    <string name="addValorPecaOrcamento">Adicione o Valor</string>

</resources>
