<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imgFotoPeca"
        android:layout_gravity="center"
        android:src="@mipmap/ic_wallpaper_black_24dp"
        android:layout_width="100dp"
        android:layout_height="100dp" />
    <EditText
        android:id="@+id/editNomePeca"
        android:hint="@string/editNomePca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editMarcaPeca"
        android:hint="@string/editMarcaPeca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editTipoCarro"
        android:hint="@string/editTipoCarro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editMarcaCarro"
        android:hint="@string/editMarcaCarro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editModeloCarro"
        android:hint="@string/editModeloCarro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editAnoModeloCarro"
        android:hint="@string/editAnoModeloCarro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editPrecoPeca"
        android:hint="@string/precoPeca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/buttonSalvar"
            android:text="@string/buttonSalvar"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/buttonCancelar"
            android:text="@string/buttonCancelar"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>