<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rafael.trabfinal.CadastroCliente">

    <EditText
        android:id="@+id/editCpfCli"
        android:hint="@string/editCpfCli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editNomeCli"
        android:hint="@string/editNomeCli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editRuaCli"
        android:hint="@string/editRuaCli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editNumCli"
            android:hint="@string/editNumCli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <EditText
            android:id="@+id/editCompleCli"
            android:layout_marginLeft="150dp"
            android:hint="@string/editCompleCli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editBairroCli"
            android:hint="@string/editBairroCli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editCepCli"
            android:hint="@string/editCepCli"
            android:layout_marginLeft="170dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editCidadeCli"
            android:hint="@string/editCidadeCli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinEstadoCli"
            android:layout_marginLeft="110dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown">
        </Spinner>
    </LinearLayout>

    <EditText
        android:id="@+id/editTelCli"
        android:hint="@string/editTelCli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editEmailCli"
        android:hint="@string/editEmailCli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">
        <Button
            android:id="@+id/buttonCancelar"
            android:text="@string/buttonCancelar"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/buttonSalvar"
            android:text="@string/buttonSalvar"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
