<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/action_opcoes"
        android:icon="@mipmap/ic_menu_black_24dp"
        app:showAsAction="always" >
        <menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto">
            <item
                android:title="@string/novoCli"
                android:id="@+id/novoCli"
                app:showAsAction="always" />
            <item
                android:title="@string/novaPeca"
                android:id="@+id/novaPeca"
                app:showAsAction="always" />
        </menu>
    </item>
    <item
        android:id="@+id/novoOrcamento"
        android:title="@string/novoOrcamento"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_content_paste_black_24dp"
        app:showAsAction="always" />
</menu>