<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textDataHora"
        android:paddingTop="10dp"
        android:textSize="20dp"
        android:paddingBottom="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editClienteOrc"
        android:hint="@string/editClienteOrc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:textSize="20dp"
            android:text="@string/textViewOrc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/imgAddPeca"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingLeft="10dp"
            android:src="@mipmap/ic_add_black_24dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qtde"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomeProdOrc"
            android:layout_marginLeft="80dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valorProdOrc"
            android:layout_marginLeft="110dp"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listPecasOrc"
        android:layout_width="wrap_content"
        android:layout_height="270dp">
    </ListView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textPrecoOrc"
            android:textSize="20sp"
            android:text="@string/editPrecoOrc"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_toRightOf="@+id/editPrecoOrc"
            android:textSize="20sp"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/buttonCancelar"
            android:text="@string/buttonCancelar"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/buttonSalvar"
            android:text="@string/buttonSalvar"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>