<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgFotoPeca"
        android:layout_gravity="center"
        android:src="@mipmap/ic_wallpaper_black_24dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"/>
    <TextView
        android:id="@+id/nomePecaOrcamento"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/marcaPecaOrcamento"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/addQtdePecaOrcamento"
        android:hint="@string/addQtdePecaOrcamento"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"/>
    <EditText
        android:id="@+id/addPrecoPecaOrcamento"
        android:hint="@string/addValorPecaOrcamento"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"/>
    <LinearLayout
        android:layout_marginTop="95dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btCacelarOrc"
            android:text="@string/cancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btAdicionarOrc"
            android:text="@string/adicionar"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>